--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "ES2017",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
+    "strict": true,
     "rootDirs": ["./src", "./scripts", "./test"],
+    "esModuleInterop": true
   },
   "exclude": ["dist", "node_modules"],
   "include": ["./test", "./src", "./scripts"],
