--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -4,22 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/jest": "^28.1.6",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
-    "hardhat": "^2.10.1"
+    "hardhat": "^2.10.1",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.3"
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2"
   }
 }
